// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has aria-label on header columns 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-label="column 1 aria label"
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-label="column 2 aria label"
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has clickable rows styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7:focus {
  position: relative;
}

.c7:focus::after {
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
  content: '';
  height: calc(100% + 3px);
  left: 0;
  outline: none;
  position: absolute;
  top: -2px;
  width: 100%;
  z-index: 3;
}

.c7:hover {
  cursor: pointer;
}

.c7:hover td {
  background-color: #DBDEE1;
}

.c7:not(:hover) td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
      role="button"
      tabindex="0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
      role="button"
      tabindex="0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
      role="button"
      tabindex="0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has custom text alignment 1`] = `
.c9 {
  background-color: inherit;
}

.c9:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c9 td {
  background-color: inherit;
}

.c10 {
  background-color: inherit;
  text-align: right;
}

.c11 {
  background-color: inherit;
  text-align: center;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: right;
}

.c4:focus {
  outline: none;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: center;
}

.c7:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: right;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c6 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: center;
}

.c6:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c8 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c6"
        scope="col"
      >
        <button
          class="c7"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c8"
  >
    <tr
      class="c9"
      data-testid="table-row-0"
    >
      <td
        class="c10"
      >
        Hello
      </td>
      <td
        class="c11"
      >
        World
      </td>
    </tr>
    <tr
      class="c9"
      data-testid="table-row-1"
    >
      <td
        class="c10"
      >
        Hello
      </td>
      <td
        class="c11"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c9"
      data-testid="table-row-2"
    >
      <td
        class="c10"
      >
        Hello
      </td>
      <td
        class="c11"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has desktop styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has error rows styles 1`] = `
.c7 {
  position: relative;
  background-color: #fcf8f9;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7::after {
  box-shadow: inset 0 0 0 1px #CD2C23;
  content: '';
  height: calc(100% + 1px);
  left: 0;
  outline: none;
  position: absolute;
  width: 100%;
  z-index: 3;
}

.c7 td:first-child::after {
  border-left: 1px solid #CD2C23;
  content: '';
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  z-index: 3;
}

.c7 td {
  background-color: inherit;
}

.c9 {
  background-color: inherit;
}

.c9:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c9 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c9"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has mobile styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) 0;
}

.c0 td {
  padding: var(--spacing-3x) 0;
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has rowNumbers styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      />
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        <span
          class="eq-table__util-column"
        >
          1
        </span>
      </td>
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        <span
          class="eq-table__util-column"
        >
          2
        </span>
      </td>
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        <span
          class="eq-table__util-column"
        >
          3
        </span>
      </td>
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has selectable rows styles 1`] = `
.c15 {
  background-color: inherit;
}

.c15:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c15 td {
  background-color: inherit;
}

.c16 {
  background-color: inherit;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c12:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c13 {
  margin-left: var(--spacing-1x);
}

.c9 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c11 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c7 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c7:hover {
  border: 1px solid #006296;
}

.c5 {
  height: 0;
  opacity: 0;
  position: absolute;
  width: 0;
}

.c5:checked + .c6 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c5:checked + .c6 > .c8 {
  display: block;
}

.c5:indeterminate + .c6 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c5:indeterminate + .c6 > .c10 {
  display: block;
}

.c5:not(:focus) + .c6 {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus + .c6 {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:not(:first-of-type) {
  margin-top: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c14 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-all"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c12"
        >
          Column 1
          <svg
            class="c13"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c12"
        >
          Column 2
          <svg
            class="c13"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c14"
  >
    <tr
      class="c15"
      data-testid="table-row-0"
    >
      <td
        class="c16"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-0"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class="c16"
      >
        Hello
      </td>
      <td
        class="c16"
      >
        World
      </td>
    </tr>
    <tr
      class="c15"
      data-testid="table-row-1"
    >
      <td
        class="c16"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-1"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class="c16"
      >
        Hello
      </td>
      <td
        class="c16"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c15"
      data-testid="table-row-2"
    >
      <td
        class="c16"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-2"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class="c16"
      >
        Hello
      </td>
      <td
        class="c16"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has small rowSize styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-half) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sorting styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="ascending"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky column styles 1`] = `
.c9 {
  background-color: inherit;
}

.c9:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c9 td {
  background-color: inherit;
}

.c10 {
  background-color: inherit;
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c11 {
  background-color: inherit;
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c12 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c6 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c6:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c7 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c7:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c8 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c6"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c7"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 3
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c8"
  >
    <tr
      class="c9"
      data-testid="table-row-0"
    >
      <td
        class="c10"
      >
        Hello
      </td>
      <td
        class="c11"
      >
        Big
      </td>
      <td
        class="c12"
      >
        World
      </td>
    </tr>
    <tr
      class="c9"
      data-testid="table-row-1"
    >
      <td
        class="c10"
      >
        Hello
      </td>
      <td
        class="c11"
      >
        Big
      </td>
      <td
        class="c12"
      >
        World
      </td>
    </tr>
    <tr
      class="c9"
      data-testid="table-row-2"
    >
      <td
        class="c10"
      >
        Hello
      </td>
      <td
        class="c11"
      >
        Big
      </td>
      <td
        class="c12"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky header styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 6;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has striped styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7:nth-child(odd) {
  background-color: #FAFAFA;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has tablet styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;
